--- a/Bull Eye/Base.lproj/Main.storyboard
+++ b/Bull Eye/Base.lproj/Main.storyboard
@@ -20,8 +20,8 @@
                                 <rect key="frame" x="177" y="784" width="60" height="28"/>
                                 <color key="backgroundColor" systemColor="linkColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="28" id="8E2-VH-SBH"/>
-                                    <constraint firstAttribute="width" constant="60" id="SrJ-Hk-qHI"/>
+                                    <constraint firstAttribute="width" constant="60" id="3VD-gK-uXq"/>
+                                    <constraint firstAttribute="height" constant="28" id="htr-sP-7RA"/>
                                 </constraints>
                                 <inset key="contentEdgeInsets" minX="5" minY="5" maxX="5" maxY="5"/>
                                 <state key="normal" title="Hit Me!">
@@ -32,20 +32,28 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aJj-hj-f2i">
-                                <rect key="frame" x="177" y="74" width="60" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="IeN-pN-uQa"/>
-                                    <constraint firstAttribute="width" constant="60" id="vEL-fR-Xbr"/>
-                                </constraints>
+                                <rect key="frame" x="177" y="74" width="60" height="0.0"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kCl-hy-1Tt">
-                                <rect key="frame" x="3" y="838" width="81" height="18"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nDY-vB-EGm">
+                                <rect key="frame" x="177" y="408" width="60" height="0.0"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="30" translatesAutoresizingMaskIntoConstraints="NO" id="pwH-Kl-MXq">
+                                <rect key="frame" x="46" y="433" width="322" height="31"/>
+                                <connections>
+                                    <action selector="sliderButton:" destination="Oj5-el-YL0" eventType="valueChanged" id="sZU-Le-8Bd"/>
+                                </connections>
+                            </slider>
+                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kCl-hy-1Tt">
+                                <rect key="frame" x="20" y="838" width="90" height="24"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="18" id="Dca-pO-HKa"/>
-                                    <constraint firstAttribute="width" constant="81" id="Gd6-N8-LxL"/>
+                                    <constraint firstAttribute="width" constant="90" id="7ax-qk-3mT"/>
+                                    <constraint firstAttribute="height" constant="24" id="8Ez-e5-Uf4"/>
                                 </constraints>
                                 <inset key="contentEdgeInsets" minX="5" minY="0.0" maxX="5" maxY="0.0"/>
                                 <state key="normal" title="Start Over"/>
@@ -53,76 +61,75 @@
                                     <action selector="startOverButton:" destination="Oj5-el-YL0" eventType="touchUpInside" id="sIO-IX-fGq"/>
                                 </connections>
                             </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="31" translatesAutoresizingMaskIntoConstraints="NO" id="LM8-BG-iEg">
+                                <rect key="frame" x="140" y="841.5" width="200" height="20.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Score" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b72-jT-pkE">
+                                        <rect key="frame" x="0.0" y="0.0" width="46" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OOg-Kv-5Ic">
+                                        <rect key="frame" x="77" y="0.0" width="10.5" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Level" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QJU-aa-Iut">
+                                        <rect key="frame" x="118.5" y="0.0" width="40" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nvb-r5-a7Y">
+                                        <rect key="frame" x="189.5" y="0.0" width="10.5" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jq8-5Q-OjD">
-                                <rect key="frame" x="348" y="832" width="46" height="30"/>
+                                <rect key="frame" x="370" y="838" width="24" height="24"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="46" id="8Cw-8c-cYr"/>
-                                    <constraint firstAttribute="height" constant="30" id="Wd3-NC-6Zg"/>
+                                    <constraint firstAttribute="height" constant="24" id="8Mp-hr-5YL"/>
+                                    <constraint firstAttribute="width" constant="24" id="R6o-7p-HoY"/>
                                 </constraints>
                                 <state key="normal" image="power" catalog="system"/>
                                 <connections>
                                     <action selector="exitButton:" destination="Oj5-el-YL0" eventType="touchUpInside" id="Lwg-Qu-pWa"/>
                                 </connections>
                             </button>
-                            <stackView opaque="NO" contentMode="scaleToFill" spacing="9" translatesAutoresizingMaskIntoConstraints="NO" id="AZ8-Xu-DVj">
-                                <rect key="frame" x="20" y="433" width="374" height="30"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YeS-cI-UJ7">
-                                        <rect key="frame" x="0.0" y="0.0" width="0.0" height="30"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="30" translatesAutoresizingMaskIntoConstraints="NO" id="pwH-Kl-MXq">
-                                        <rect key="frame" x="7" y="0.0" width="360" height="31"/>
-                                        <connections>
-                                            <action selector="sliderButton:" destination="Oj5-el-YL0" eventType="valueChanged" id="sZU-Le-8Bd"/>
-                                        </connections>
-                                    </slider>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cGB-mg-cN7">
-                                        <rect key="frame" x="374" y="0.0" width="0.0" height="30"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstItem="pwH-Kl-MXq" firstAttribute="leading" secondItem="YeS-cI-UJ7" secondAttribute="trailing" constant="20" id="1co-CH-YJ0"/>
-                                    <constraint firstItem="cGB-mg-cN7" firstAttribute="leading" secondItem="pwH-Kl-MXq" secondAttribute="trailing" constant="20" id="ghd-Sw-9OS"/>
-                                </constraints>
-                            </stackView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nDY-vB-EGm">
-                                <rect key="frame" x="177" y="832" width="60" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="60" id="EIx-rg-NrY"/>
-                                    <constraint firstAttribute="height" constant="30" id="iNp-nV-FPi"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Ztt-wZ-Tbu"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="nDY-vB-EGm" firstAttribute="bottom" secondItem="Ztt-wZ-Tbu" secondAttribute="bottom" id="0JY-Po-KSJ"/>
-                            <constraint firstItem="nDY-vB-EGm" firstAttribute="leading" secondItem="jpx-JQ-I7R" secondAttribute="leading" id="DdF-aV-PMr"/>
-                            <constraint firstItem="aJj-hj-f2i" firstAttribute="top" secondItem="Ztt-wZ-Tbu" secondAttribute="top" constant="30" id="FCI-qf-aiS"/>
-                            <constraint firstItem="nDY-vB-EGm" firstAttribute="leading" secondItem="aJj-hj-f2i" secondAttribute="leading" id="Iku-Lr-dyw"/>
-                            <constraint firstItem="AZ8-Xu-DVj" firstAttribute="leading" secondItem="Ztt-wZ-Tbu" secondAttribute="leading" constant="20" id="K3g-BC-3xf"/>
-                            <constraint firstItem="kCl-hy-1Tt" firstAttribute="leading" secondItem="Ztt-wZ-Tbu" secondAttribute="leading" constant="3" id="Mdg-n5-0LT"/>
-                            <constraint firstItem="Ztt-wZ-Tbu" firstAttribute="trailing" secondItem="jq8-5Q-OjD" secondAttribute="trailing" constant="20" id="Ozr-dp-eCb"/>
-                            <constraint firstItem="kCl-hy-1Tt" firstAttribute="bottom" secondItem="Ztt-wZ-Tbu" secondAttribute="bottom" constant="-6" id="SYA-p8-fze"/>
-                            <constraint firstItem="Ztt-wZ-Tbu" firstAttribute="trailing" secondItem="AZ8-Xu-DVj" secondAttribute="trailing" constant="20" id="a2E-2Q-pIL"/>
-                            <constraint firstItem="jq8-5Q-OjD" firstAttribute="bottom" secondItem="Ztt-wZ-Tbu" secondAttribute="bottom" id="ilo-cD-Rd9"/>
-                            <constraint firstItem="AZ8-Xu-DVj" firstAttribute="centerX" secondItem="CFH-k3-KqK" secondAttribute="centerX" id="jov-bI-tOM"/>
-                            <constraint firstItem="AZ8-Xu-DVj" firstAttribute="centerY" secondItem="CFH-k3-KqK" secondAttribute="centerY" id="ta9-UZ-VU1"/>
-                            <constraint firstItem="Ztt-wZ-Tbu" firstAttribute="bottom" secondItem="jpx-JQ-I7R" secondAttribute="bottom" constant="50" id="u5I-ac-zkB"/>
-                            <constraint firstItem="aJj-hj-f2i" firstAttribute="centerX" secondItem="CFH-k3-KqK" secondAttribute="centerX" id="vnR-sB-Ipv"/>
+                            <constraint firstItem="kCl-hy-1Tt" firstAttribute="leading" secondItem="Ztt-wZ-Tbu" secondAttribute="leading" constant="20" id="31v-sI-lv9"/>
+                            <constraint firstItem="pwH-Kl-MXq" firstAttribute="top" secondItem="nDY-vB-EGm" secondAttribute="bottom" constant="25" id="83h-Dg-OLx"/>
+                            <constraint firstItem="jpx-JQ-I7R" firstAttribute="trailing" secondItem="aJj-hj-f2i" secondAttribute="trailing" id="9IT-7M-JqK"/>
+                            <constraint firstItem="Ztt-wZ-Tbu" firstAttribute="bottom" secondItem="jpx-JQ-I7R" secondAttribute="bottom" constant="50" id="9y9-Hc-dQ3"/>
+                            <constraint firstItem="LM8-BG-iEg" firstAttribute="leading" secondItem="kCl-hy-1Tt" secondAttribute="trailing" constant="30" id="DrF-JB-KuE"/>
+                            <constraint firstItem="kCl-hy-1Tt" firstAttribute="bottom" secondItem="Ztt-wZ-Tbu" secondAttribute="bottom" id="Hjw-c7-Xsd"/>
+                            <constraint firstItem="LM8-BG-iEg" firstAttribute="bottom" secondItem="Ztt-wZ-Tbu" secondAttribute="bottom" id="HnV-jD-1eW"/>
+                            <constraint firstItem="Ztt-wZ-Tbu" firstAttribute="trailing" secondItem="jq8-5Q-OjD" secondAttribute="trailing" constant="20" id="KWN-lX-cG5"/>
+                            <constraint firstItem="pwH-Kl-MXq" firstAttribute="centerX" secondItem="CFH-k3-KqK" secondAttribute="centerX" id="PyY-l7-yhv"/>
+                            <constraint firstItem="jpx-JQ-I7R" firstAttribute="leading" secondItem="aJj-hj-f2i" secondAttribute="leading" id="SfV-pp-0XM"/>
+                            <constraint firstItem="jpx-JQ-I7R" firstAttribute="centerX" secondItem="pwH-Kl-MXq" secondAttribute="centerX" id="V25-Zh-UtH"/>
+                            <constraint firstItem="jpx-JQ-I7R" firstAttribute="trailing" secondItem="nDY-vB-EGm" secondAttribute="trailing" id="YU2-gs-JJD"/>
+                            <constraint firstItem="jq8-5Q-OjD" firstAttribute="bottom" secondItem="Ztt-wZ-Tbu" secondAttribute="bottom" id="bhb-Cd-Ej6"/>
+                            <constraint firstItem="pwH-Kl-MXq" firstAttribute="centerY" secondItem="CFH-k3-KqK" secondAttribute="centerY" id="bvK-cF-eXP"/>
+                            <constraint firstItem="pwH-Kl-MXq" firstAttribute="leading" secondItem="Ztt-wZ-Tbu" secondAttribute="leading" constant="48" id="dA5-oV-Bfr"/>
+                            <constraint firstItem="jpx-JQ-I7R" firstAttribute="leading" secondItem="nDY-vB-EGm" secondAttribute="leading" id="ezu-yC-MUj"/>
+                            <constraint firstItem="aJj-hj-f2i" firstAttribute="top" secondItem="Ztt-wZ-Tbu" secondAttribute="top" constant="30" id="kXj-PU-poP"/>
+                            <constraint firstItem="jq8-5Q-OjD" firstAttribute="leading" secondItem="LM8-BG-iEg" secondAttribute="trailing" constant="30" id="pgV-4B-qqD"/>
+                            <constraint firstItem="Ztt-wZ-Tbu" firstAttribute="trailing" secondItem="pwH-Kl-MXq" secondAttribute="trailing" constant="48" id="yrF-IG-Z6W"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="Levellabel" destination="nvb-r5-a7Y" id="gC2-uU-YgT"/>
                         <outlet property="numberLabel" destination="aJj-hj-f2i" id="LXH-Oh-6oA"/>
+                        <outlet property="scorelabel" destination="OOg-Kv-5Ic" id="NP5-7z-x9b"/>
                         <outlet property="sliderValueLabel" destination="nDY-vB-EGm" id="irQ-UX-Eue"/>
                         <outlet property="uiSlider" destination="pwH-Kl-MXq" id="hcN-m6-qgF"/>
                     </connections>
